# nd_lib

./: .travis.yml  Cargo.toml  README.md
fixtures/1-wrong-package-version-installed/: package-lock.json
fixtures/2-valid-multiple-versions/: package-lock.json  package.json
fixtures/3-dep-not-installed/: package.json
fixtures/4-installs-subdeps/: package.json
fixtures/dep-not-installed/: package.json
fixtures/edon-test-a/: package-lock.json
fixtures/edon-test-b/: package-lock.json
fixtures/edon-test-c/: package.json
fixtures/example/: package-lock.json  package.json
fixtures/missing-dep-from-lock/: package-lock.json  package.json
fixtures/missing-subdep-from-lock/: package-lock.json  package.json
fixtures/no_deps/: package-lock.json
src/: cache.rs  lib.rs  package.rs  refresh.rs
